Fix layout of tabs
They need to be wrapped inside a `container` or `container-fluid`
otherwise extra margins will be added, causing a horizontal scrollbar to
appear.

--- a/_default/web/css/customer.css
+++ b/_default/web/css/customer.css
@@ -157,8 +157,12 @@ footer.customer ul.social li {
 
 /** Tabs */
 
-ul.nav-tabs {
+nav.container-fluid {
     background-color: #9a1904;
+}
+
+ul.nav-tabs {
+    border-bottom: none;
 }
 
 ul.nav-tabs li.nav-item {
